[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "store-address-mcp"
version = "0.1.0"
description = "MCP server: store locations by city (HTTP transport for AWS App Runner)."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["store_address_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py311"
